Add time column to flights and implemented it in the views and test

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -6,6 +6,7 @@
     <h3>Number: <%= link_to "#{flight.number}", flight_path(flight) %></h3>
     Passengers: <%= flight.passenger_count %><br>
     Date: <%= flight.date %><br>
+    Time: <%= flight.time %><br>
     Departure: <%= flight.departure_city %><br>
     Arrival: <%= flight.arrival_city %><br><br>
     <br>
