--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Flight #<%= @flight.number %></h1>
 * Date: <%= @flight.date %><br>
+* Time: <%= @flight.time %><br>
 * Departure: <%= @flight.departure_city %><br>
 * Arrival: <%= @flight.arrival_city %><br><br>
 
