--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -4,11 +4,11 @@
 <% @flights.each do |flight| %>
   <section id="flight-<%= flight.id %>">
     <h3>Number: <%= link_to "#{flight.number}", flight_path(flight) %></h3>
-    Passengers: <%= flight.passenger_count %><br>
-    Date: <%= flight.date %><br>
-    Time: <%= flight.time %><br>
-    Departure: <%= flight.departure_city %><br>
-    Arrival: <%= flight.arrival_city %><br><br>
+    * Passengers: <%= flight.passenger_count %><br>
+    * Date: <%= flight.date %><br>
+    * Time: <%= flight.time %><br>
+    * Departure: <%= flight.departure_city %><br>
+    * Arrival: <%= flight.arrival_city %><br><br>
     <br>
   </section>
 <% end %>
